🩹 fix: #83 실시간채팅 수정

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -23,7 +23,9 @@
             </div>
             <div class="input-container">
                 <input type="text" id="messageInput" placeholder="Enter your message..." />
-                <button id="sendButton">Send</button>
+                <button id="sendButton">
+                    <img src="/images/paper-plane-icon.svg" alt="보내기 아이콘" class="send-icon" />
+                </button>
             </div>
         </div>
     </div>
