--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -1,47 +1,81 @@
-.content {
-    flex: 1;
-    padding: 20px;
-}
-
 .chat-container {
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
+    padding: 30px;
+    background-color: #f7f7f7;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .messages {
-    height: 300px;
+    height: 500px;
     overflow-y: auto;
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: #f9f9f9;
+    padding: 20px;
+    background-color: #eaeaea;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.message {
+    max-width: 80%;
+    padding: 15px;
+    border-radius: 20px;
+    position: relative;
+    word-wrap: break-word;
+    margin-bottom: 15px;
+}
+
+.message.sent {
+    align-self: flex-end;
+    background-color: #dcf8c6;
+    color: #000;
+}
+
+.message.received {
+    align-self: flex-start;
+    background-color: #ffffff;
+    color: #000;
 }
 
 .input-container {
     display: flex;
+    margin-top: 30px;
 }
 
 .input-container input {
     flex: 1;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 20px;
     border: 1px solid #ccc;
+    outline: none;
 }
 
 .input-container button {
     padding: 10px;
     margin-left: 10px;
-    border-radius: 5px;
+    border-radius: 50%;
     background-color: #007bff;
-    color: white;
     border: none;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+}
+
+.input-container button img.send-icon {
+    width: 20px;
+    height: 20px;
+    filter: invert(100%);
+}
+
+.input-container button:hover {
+    background-color: #0056b3;
 }
 
 body.dark .chat-container {
@@ -51,6 +85,14 @@ body.dark .chat-container {
 body.dark .messages {
     background-color: #333;
     color: #fff;
+}
+
+body.dark .message.sent {
+    background-color: #82b1ff;
+}
+
+body.dark .message.received {
+    background-color: #555;
 }
 
 body.dark .input-container input {
