🩹 fix: #83 SSE 중복관련 문제 해결

--- a/src/main/resources/templates/rank/Rank.html
+++ b/src/main/resources/templates/rank/Rank.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/css/ranktopsearch.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5.0.0/dark.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="module" th:src="@{/js/auth.js}" defer></script>
   <script th:src="@{/js/scripts.js}" defer></script>
   <script th:src="@{/js/ranktopsearch.js}" defer></script>
 </head>
