✨ update - #86 리뷰 10개 작성 시 모집글 요약 내용 업데이트

--- a/src/main/resources/templates/review/reviewAdd.html
+++ b/src/main/resources/templates/review/reviewAdd.html
@@ -76,8 +76,25 @@
                     <select id="sub-title" name="sub-title" required>
                         <option value="" disabled selected>부트캠프를 선택하세요</option>
                         <option value="스파르타">스파르타</option>
-                        <option value="소제목2">소제목2</option>
-                        <option value="소제목3">소제목3</option>
+                        <option value="코드잇 스프린트">코드잇 스프린트</option>
+                        <option value="멋쟁이 사자처럼">멋쟁이 사자처럼</option>
+                        <option value="내일배움캠프">내일배움캠프</option>
+                        <option value="이스트 소프트">이스트 소프트</option>
+                        <option value="SM UNIVERSE">SM UNIVERSE</option>
+                        <option value="솔데스크">솔데스크</option>
+                        <option value="멀티 캠퍼스">멀티 캠퍼스</option>
+                        <option value="패스트캠퍼스">패스트캠퍼스</option>
+                        <option value="KT">KT</option>
+                        <option value="제로베이스">제로베이스</option>
+                        <option value="항해99">항해99</option>
+                        <option value="엘리스트랙">엘리스트랙</option>
+                        <option value="바닐라코딩">바닐라코딩</option>
+                        <option value="플레이데이터">플레이데이터</option>
+                        <option value="마이크로소프트">마이크로소프트</option>
+                        <option value="중앙HTA">중앙HTA</option>
+                        <option value="구트아카데미">구트아카데미</option>
+                        <option value="오즈코딩스쿨">오즈코딩스쿨</option>
+                        <option value="구름톤 딥다이브">구름톤 딥다이브</option>
                     </select>
                 </div>
                 <div class="form-group">
