✨ update - #86 모집글 상세 페이지 요약 내용 연동

--- a/src/main/resources/templates/recruitment/recruitmentDetail.html
+++ b/src/main/resources/templates/recruitment/recruitmentDetail.html
@@ -112,6 +112,10 @@
                     </div>
                 </div>
             </div>
+            <div id="reviewSummary" class="review-summary">
+                <h3>부트캠프 리뷰 요약</h3>
+                <p id="reviewSummary-text">리뷰 요약 내용이 여기에 표시됩니다.</p>
+            </div>
             <div class="back-to-list-container">
                 <a th:href="@{/camp}" class="back-to-list-button">목록으로 가기</a>
             </div>
