--- a/src/main/resources/static/css/recruitment/recruitmentDetail.css
+++ b/src/main/resources/static/css/recruitment/recruitmentDetail.css
@@ -145,6 +145,18 @@ body.dark {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
+.review-summary {
+    flex: 1;
+    background-color: var(--sidebar-bg);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-top: 18px;
+}
+.review-summary h3 {
+    font-size: 18px;
+}
+
 .info-section {
     margin-bottom: 20px;
 }
