✨ update : #115 어드민 페이지에 이미지 파일 삽입 추가

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -78,6 +78,7 @@
         <h2>부트캠프 등록</h2>
         <input type="text" id="bootcampName" placeholder="부트캠프 이름">
         <input type="text" id="description" placeholder="부트캠프 한 줄 설명">
+        <input type="file" id="imageFile" accept="image/*">
         <button id="btnRegister" class="btn-register">등록하기</button>
       </div>
     </div>
