💄 style : #115 Rank 페이지 UI에 description 추가

--- a/src/main/resources/static/css/rank/Rank.css
+++ b/src/main/resources/static/css/rank/Rank.css
@@ -5,9 +5,16 @@ body {
 }
 
 .emoji {
-    font-size: 2rem; /* 이모지 크기 조정 */
+    font-size: 2rem;
     display: inline-block;
     margin-bottom: 15px;
+}
+
+.camp-description {
+    font-size: 17px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
 }
 
 .container {
