--- a/src/main/resources/templates/review/reviewAdd.html
+++ b/src/main/resources/templates/review/reviewAdd.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="button-group">
                     <button type="button" class="cancel-button" onclick="cancelReview()" th:data-cancel-url="@{/review}">취소</button>
-                    <button type="submit" class="submit-button" th:data-submit-url="@{/api/reviews}">리뷰 제출</button>
+                    <button type="submit" class="submit-button">리뷰 제출</button>
                 </div>
             </form>
         </div>
