🩹 fix: #126 좋아요한 리뷰 연동완료

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -50,7 +50,7 @@
                         <div class="activity-card" data-activity="liked-reviews">
                              <div class="activity-icon">👍</div>
                             <div class="activity-title">좋아요한 리뷰</div>
-                            <div class="activity-count">12</div>
+                            <div class="activity-count"></div>
                         </div>
                         <div class="activity-card" data-activity="liked-studies">
                             <div class="activity-icon">📚</div>
