🩹 fix: #126 작성한 리뷰, 작성한 질문, 작성한 답변 프론트연동 및 백엔드 추가

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -60,12 +60,12 @@
                         <div class="activity-card" data-activity="written-reviews">
                             <div class="activity-icon">✍️</div>
                             <div class="activity-title">작성한 리뷰</div>
-                            <div class="activity-count">7</div>
+                            <div class="activity-count"></div>
                         </div>
                         <div class="activity-card" data-activity="written-questions">
                             <div class="activity-icon">❓</div>
                             <div class="activity-title">작성한 질문</div>
-                            <div class="activity-count">15</div>
+                            <div class="activity-count"></div>
                         </div>
                         <div class="activity-card" data-activity="written-answers">
                             <div class="activity-icon">💬</div>
