🩹 fix: #126 작성한 스터디 백엔드 추가 및 프론트연동

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -70,12 +70,12 @@
                         <div class="activity-card" data-activity="written-answers">
                             <div class="activity-icon">💬</div>
                             <div class="activity-title">작성한 답변</div>
-                            <div class="activity-count">23</div>
+                            <div class="activity-count"></div>
                         </div>
                         <div class="activity-card" data-activity="written-studies">
                             <div class="activity-icon">🤝</div>
                             <div class="activity-title">작성한 스터디</div>
-                            <div class="activity-count">2</div>
+                            <div class="activity-count"></div>
                         </div>
                     </div>
                 </div>
